--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "expo": "~38.0.8",
+    "expo-splash-screen": "^0.3.1",
     "expo-status-bar": "^1.0.2",
     "moment": "^2.24.0",
     "react": "~16.11.0",
